generator client {
  provider = "prisma-client-js"
  previewFeatures = ["relationJoins", "prismaSchemaFolder"]
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "sqlite"
  url = "file:./dev.db"
  relationMode = "foreignKeys"
}

model Store {
  @@map("stores")

  id Int @id @default(autoincrement())
  name String
  cnpj String @unique

  createdAt DateTime @map("created_at") @default(now())
  updatedAt DateTime @map("updated_at") @updatedAt

  storeProducts StoreProduct[]
  invoices Invoice[]
}

enum InvoiceStatus {
  PENDING
  PROCESSED
  ERROR
}

model Invoice {
  @@map("invoices")

  id Int @id @default(autoincrement())
  accessKey String @unique @map("access_key")
  storeId Int? @map("store_id")
  status InvoiceStatus
  emissionDate DateTime? @map("emission_date")
  processedAt DateTime? @map("processed_at")
  totalValue Int? @map("total_value")

  store Store? @relation(fields: [storeId], references: [id])
  invoiceProducts InvoiceProduct[]

  createdAt DateTime @map("created_at") @default(now())
  updatedAt DateTime @map("updated_at") @updatedAt
}

model InvoiceProduct {
  @@map("invoice_products")

  id Int @id @default(autoincrement())
  invoiceId Int @map("invoice_id")
  productId Int @map("product_id")
  quantity Float
  price Int
  unitPrice Int @map("unit_price")
  tax Int?
  discount Int?

  invoice Invoice @relation(fields: [invoiceId], references: [id])
  product Product @relation(fields: [productId], references: [id])
}

enum ProductUnit {
  UN
  KG
  L
}

model Product {
  @@map("products")

  id Int @id @default(autoincrement())
  name String
  unit ProductUnit
  ean String? @unique
  createdAt DateTime @map("created_at") @default(now())
  updatedAt DateTime @map("updated_at") @updatedAt

  storeProducts StoreProduct[]
  invoiceProducts InvoiceProduct[]
}

model StoreProduct {
  @@map("store_products")
  @@id([storeId, code])

  storeId Int @map("store_id")
  code String

  productId Int @map("product_id")

  store Store @relation(fields: [storeId], references: [id])
  product Product @relation(fields: [productId], references: [id])
}
