//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table stores {
  id Int [pk, increment]
  name String [not null]
  cnpj String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  storeProducts store_products [not null]
  invoices invoices [not null]
}

Table invoices {
  id Int [pk, increment]
  accessKey String [unique, not null]
  storeId Int
  status InvoiceStatus [not null]
  emissionDate DateTime
  processedAt DateTime
  totalValue Int
  store stores
  invoiceProducts invoice_products [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table invoice_products {
  id Int [pk, increment]
  invoiceId Int [not null]
  productId Int [not null]
  quantity Float [not null]
  price Int [not null]
  unitPrice Int [not null]
  tax Int
  discount Int
  invoice invoices [not null]
  product products [not null]
}

Table products {
  id Int [pk, increment]
  name String [not null]
  unit ProductUnit [not null]
  ean String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  storeProducts store_products [not null]
  invoiceProducts invoice_products [not null]
}

Table store_products {
  storeId Int [not null]
  code String [not null]
  productId Int [not null]
  store stores [not null]
  product products [not null]

  indexes {
    (storeId, code) [pk]
  }
}

Enum InvoiceStatus {
  PENDING
  PROCESSED
  ERROR
}

Enum ProductUnit {
  UN
  KG
  L
}

Ref: invoices.storeId > stores.id

Ref: invoice_products.invoiceId > invoices.id

Ref: invoice_products.productId > products.id

Ref: store_products.storeId > stores.id

Ref: store_products.productId > products.id